--- a/index.ipynb
+++ b/index.ipynb
@@ -146,10 +146,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "italy # 'Italy'"
@@ -215,7 +213,7 @@
    },
    "outputs": [],
    "source": [
-    "None # add code here"
+    "countries.append('')"
    ]
   },
   {
