--- a/index.ipynb
+++ b/index.ipynb
@@ -207,13 +207,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "countries.append('')"
+    "countries.append('Malta')"
    ]
   },
   {
@@ -231,7 +229,7 @@
    },
    "outputs": [],
    "source": [
-    "None # add code here"
+    "countries.append()"
    ]
   },
   {
