automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -407,7 +407,8 @@
    },
    "outputs": [],
    "source": [
-    "unique_countries = set()"
+    "unique_countries = set(countries)\n",
+    "unique_countries = "
    ]
   },
   {
