--- a/index.ipynb
+++ b/index.ipynb
@@ -401,23 +401,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "unique_countries = set(countries)\n",
-    "unique_countries = "
+    "unique_countries = list(unique_countries)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Argentina',\n",
+       " 'Thailand',\n",
+       " 'USA',\n",
+       " 'Morocco',\n",
+       " 'Canada',\n",
+       " 'Malta',\n",
+       " 'Italy',\n",
+       " 'Mexico',\n",
+       " 'Croatia',\n",
+       " 'South Korea',\n",
+       " 'Finland']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "unique_countries # ['Canada', 'Italy', 'USA', 'Mexico', 'Finland', \n",
     "#'Malta', 'Morocco', 'Croatia', 'Argentina', 'South Korea']"
