--- a/index.ipynb
+++ b/index.ipynb
@@ -455,7 +455,7 @@
    },
    "outputs": [],
    "source": [
-    "num_of_repeats = None\n",
+    "num_of_repeats = countries.len - unique_\n",
     "num_of_repeats # 3"
    ]
   },
