--- a/index.ipynb
+++ b/index.ipynb
@@ -465,7 +465,8 @@
     }
    ],
    "source": [
-    "num_of_repeats = countries.len() - unique_countries.len()\n",
+    "typeof()\n",
+    "num_of_repeats = \n",
     "num_of_repeats # 3"
    ]
   },
