automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -465,7 +465,8 @@
     }
    ],
    "source": [
-    "typeof()\n",
+    "typeof(countries) \n",
+    "typeof(unique_countries.len()\n",
     "num_of_repeats = \n",
     "num_of_repeats # 3"
    ]
