automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -449,21 +449,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-17-2c90847604e4>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-17-2c90847604e4>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    type of(countries)\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "typeof(countries) \n",
-    "typeof(unique_countries)\n",
+    "print(type(countries)) \n",
+    "type(unique_countries)\n",
     "num_of_repeats = None\n",
     "num_of_repeats # 3"
    ]
