automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -449,13 +449,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "<class 'list'>\n"
+     ]
+    }
+   ],
    "source": [
     "print(type(countries)) \n",
-    "type(unique_countries)\n",
-    "num_of_repeats = None\n",
+    "print(type(unique_countries))\n",
+    "num_of_repeats = countries\n",
     "num_of_repeats # 3"
    ]
   },
