automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -475,7 +475,7 @@
    "source": [
     "print(type(countries)) \n",
     "print(type(unique_countries))\n",
-    "num_of_repeats = countries.len() - unique_countries.len()\n",
+    "num_of_repeats = lcountries.len() - unique_countries.len()\n",
     "num_of_repeats # 3"
    ]
   },
